@@ -1,4 +1,4 @@
 AUX cap 345 RMD160 b8e2e2c5f36fafd8eecfc9dbc26fa018c4ee0f21 SHA1 cfddf78c5c7cb5525b0744fdd09bee572924eaf1 SHA256 716010e985be4870a1757b3c096e7c71c9a5a9af232c06650cf74f2989d5b754
-EBUILD capistrano-launcher-1.ebuild 827 RMD160 4f4f02124fdee95208dfb999fb7249cfa49d8e8d SHA1 e5d1971c6b17d4cfd29868e9117427353b5f2ee5 SHA256 47a24d8cdfbe2239e8aa3f8d9695b2e9db0f955fb4ab8bcb788e98c2d5815fca
-MISC ChangeLog 960 RMD160 4d3faa9c892b3eaa0959a09d67ea900688680882 SHA1 1430eb17326b2568b0cd665e41eeb334637f5486 SHA256 9d00fe4707d70a414c67278ac695c322967dc6fa910d641db252e2cebf4e8ba3
+EBUILD capistrano-launcher-1.ebuild 835 RMD160 4bb459874f49cf3354c63497f847340f873d1a68 SHA1 d26990fb6fc9e4d5251c6de4c206d42d2153ee46 SHA256 5c194b4a4dfcd05ba847384d07db041757a1e817d84620300eb1ce9b22bc8936
+MISC ChangeLog 1061 RMD160 75a681d4ed5a15fb599d9d9b7fe128ad91339def SHA1 a05a3de3ab3a9aef9e7178cdcbe903f98b9fdcb0 SHA256 e873be752353488790b933c538b6b0b3032600aaa50768d0d6cccc97a3b72fc8
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
