@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/capistrano-launcher/Attic/capistrano-launcher-1.ebuild,v 1.7 2007/11/14 06:56:43 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/capistrano-launcher/Attic/capistrano-launcher-1.ebuild,v 1.8 2008/04/09 22:02:59 robbat2 Exp $
 
 DESCRIPTION="Launcher script for capistrano"
 HOMEPAGE="http://capify.org/"
@@ -8,7 +8,7 @@ SRC_URI=""
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ia64 ppc64 x86"
+KEYWORDS="amd64 ia64 ppc64 x86 ~ppc"
 IUSE=""
 
 # Block versions of capistrano that install /usr/bin/cap to avoid file-collision
