@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/capistrano-launcher
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/capistrano-launcher/Attic/ChangeLog,v 1.6 2007/11/14 06:56:43 welp Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/capistrano-launcher/Attic/ChangeLog,v 1.7 2008/04/09 22:02:59 robbat2 Exp $
+
+  09 Apr 2008; Robin H. Johnson <robbat2@gentoo.org>
+  capistrano-launcher-1.ebuild:
+  Add ~ppc.
 
   14 Nov 2007; Peter Weller <welp@gentoo.org> capistrano-launcher-1.ebuild:
   Stable on amd64 wrt bug 198966
